<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_one_card"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/add_quiz_cards"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_card"
        android:orderInCategory="100"
        android:icon="@drawable/ic_help"
        android:title="@string/edit_current_card"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_card"
        android:orderInCategory="100"
        android:icon="@drawable/ic_help"
        android:title="@string/delete_current_card"
        app:showAsAction="never" />

</menu>
