<?xml version="1.0" encoding="utf-8"?>

<!--todo 为什么RelativeLayout 比 ConstraintLayout 好-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/subscription_option_bg_unchoose"
    android:id="@+id/subscription_option_view"
    android:layout_height="69dp"
    android:layout_marginHorizontal="20dp"
    android:layout_width="match_parent">
        
    <ImageView
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/subscription_option_unchoose"
        android:id="@+id/choose_imageview"
        android:layout_width="18dp"
        android:layout_height="18dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_toLeftOf="@+id/subscription_option_line_view"
        android:layout_toRightOf="@+id/choose_imageview"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/subscription_option_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription_option_name1"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/subscription_option_price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subscription_option_title_view"
            android:text="@string/subscription_option_name1_description"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/subscription_option_line_view"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80dp"
        android:background="@color/black"
        android:layout_centerVertical="true"
        android:layout_width="1dp"
        android:layout_height="45dp"/>


    <TextView
        android:id="@+id/subscription_option_save_off_view"
        android:text="save"
        android:textColor="@color/black"
        android:layout_alignParentRight="true"
        android:layout_marginRight="23dp"
        android:layout_marginTop="12dp"
        android:layout_width="45dp"
        android:layout_height="17dp"
        android:gravity="center"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/subscription_option_save_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:layout_below="@+id/subscription_option_save_off_view"
        android:layout_marginTop="0dp"
        android:text="35%"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/subscription_option_most_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:text="@string/most_popular"
        android:maxWidth="60dp"
        android:visibility="gone"
        android:maxLines="2"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

</RelativeLayout>